[tool.poetry]
name = "alembic-issue-25"
version = "0.1.0"
description = ""
authors = ["george hartzell <hartzell@alerce.com>"]

[tool.poetry.dependencies]
python = "^3.7"
alembic = "^1.4.2"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
